// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/atoms/Input default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  left: 1rem;
  padding: 0 0rem;
  background-color: transparent;
  font-size: 1rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #323232;
  color: #323232;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c1:hover {
  color: rgb(33,18,94);
  outline-width: 1px;
  outline-style: solid;
  border-color: rgb(33,18,94);
  outline-color: rgb(33,18,94);
}

.c2 {
  position: relative;
  width: 100%;
}

.c3 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={false}
  >
    <div
      className="c2"
    >
      <input
        className="c3"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        value=""
      />
      <label
        className="c4"
      >
        Empty
      </label>
    </div>
  </div>
  <div
    className="c5"
  />
</div>
`;

exports[`Storyshots @components/atoms/Input disabled 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  left: 1rem;
  padding: 0 0rem;
  background-color: transparent;
  font-size: 1rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #7d7d7d;
  color: #7d7d7d;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c1:hover {
  color: #7d7d7d;
  outline-width: 0px;
  outline-style: solid;
  border-color: #7d7d7d;
  outline-color: #7d7d7d;
}

.c2 {
  position: relative;
  width: 100%;
}

.c3 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={true}
  >
    <div
      className="c2"
    >
      <input
        className="c3"
        disabled={true}
        onBlur={[Function]}
        onFocus={[Function]}
        value=""
      />
      <label
        className="c4"
      >
        Text goes here
      </label>
    </div>
  </div>
  <div
    className="c5"
  />
</div>
`;

exports[`Storyshots @components/atoms/Input error 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  left: 0.5rem;
  padding: 0 0.5rem;
  background-color: transparent;
  font-size: 0.75rem;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #c22d74;
  color: #c22d74;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c1:hover {
  color: #c22d74;
  outline-width: 1px;
  outline-style: solid;
  border-color: #c22d74;
  outline-color: #c22d74;
}

.c2 {
  position: relative;
  width: 100%;
}

.c3 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={false}
  >
    <div
      className="c2"
    >
      <input
        className="c3"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        value="Some text"
      />
      <label
        className="c4"
      >
        Text goes here
      </label>
    </div>
  </div>
  <div
    className="c5"
  />
</div>
`;

exports[`Storyshots @components/atoms/Input with value 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c6 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  left: 0.5rem;
  padding: 0 0.5rem;
  background-color: transparent;
  font-size: 0.75rem;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #323232;
  color: #323232;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c1:hover {
  color: rgb(33,18,94);
  outline-width: 1px;
  outline-style: solid;
  border-color: rgb(33,18,94);
  outline-color: rgb(33,18,94);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
  width: 100%;
}

.c3 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={false}
  >
    <div
      className="c2"
    >
      <input
        className="c3"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        value="Example text"
      />
      <label
        className="c4"
      >
        Text goes here
      </label>
    </div>
    <span
      className="c5"
    >
      <div>
        Content right
      </div>
    </span>
  </div>
  <div
    className="c6"
  />
</div>
`;
